conflicts corrected ,letter spacing removed for about me

--- a/HomePage.css
+++ b/HomePage.css
@@ -129,7 +129,7 @@ h2:after {
   margin-top: 20px;
   margin-bottom: 15px;
   color: white;
-  letter-spacing: 1.5px;
+  /* letter-spacing: 1.5px; */
   line-height: 1.6;
   font-size: 20px;
   position: relative;
